{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 34,
  "lineage": "04439eb1-3f01-8136-baa5-d1f51c40bb6e",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "trusted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:security-group/sg-0cea6ea05f090999b",
            "description": "trusted network",
            "egress": [],
            "id": "sg-0cea6ea05f090999b",
            "ingress": [],
            "name": "dev-ap-southeast-1-trustedsg",
            "name_prefix": "",
            "owner_id": "573275805523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-ap-southeast-1-trustedsg"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-trustedsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c287d2242b0b0bd7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "untrusted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:security-group/sg-0d04586960e7b8a3a",
            "description": "Untrusted network",
            "egress": [],
            "id": "sg-0d04586960e7b8a3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-ap-southeast-1-untrustedsg",
            "name_prefix": "",
            "owner_id": "573275805523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-ap-southeast-1-untrustedsg"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-untrustedsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c287d2242b0b0bd7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allowhttpsTrusted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS",
            "from_port": 443,
            "id": "sgrule-4221315776",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cea6ea05f090999b",
            "security_group_rule_id": "sgr-08a13db8563a3349b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.trusted"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allowhttpsUntrusted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS",
            "from_port": 443,
            "id": "sgrule-3202613328",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d04586960e7b8a3a",
            "security_group_rule_id": "sgr-0dfef7be43328a9a2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.untrusted"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:subnet/subnet-0b36200774e9f85fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.100.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b36200774e9f85fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ap-southeast-1-priv-1"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-priv-1"
            },
            "vpc_id": "vpc-0c287d2242b0b0bd7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:subnet/subnet-001bfd628d73c9251",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.100.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001bfd628d73c9251",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ap-southeast-1-priv-2"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-priv-2"
            },
            "vpc_id": "vpc-0c287d2242b0b0bd7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:subnet/subnet-0e9d0f0abbff8b0c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.100.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9d0f0abbff8b0c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ap-southeast-1-priv-3"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-priv-3"
            },
            "vpc_id": "vpc-0c287d2242b0b0bd7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:subnet/subnet-07610476a9d8840fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07610476a9d8840fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ap-southeast-1-pub-1"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-pub-1"
            },
            "vpc_id": "vpc-0c287d2242b0b0bd7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:subnet/subnet-03c0c54ad03de1ace",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.100.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c0c54ad03de1ace",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ap-southeast-1-pub-2"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-pub-2"
            },
            "vpc_id": "vpc-0c287d2242b0b0bd7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:subnet/subnet-0b9fec6b9121ecee4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.100.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9fec6b9121ecee4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "573275805523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-ap-southeast-1-pub-3"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-pub-3"
            },
            "vpc_id": "vpc-0c287d2242b0b0bd7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:573275805523:vpc/vpc-0c287d2242b0b0bd7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0681565c2149b4365",
            "default_route_table_id": "rtb-0ea3eee9e8d1acfc2",
            "default_security_group_id": "sg-0055f1fc4f13dfbed",
            "dhcp_options_id": "dopt-02afaa1ac508340c1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c287d2242b0b0bd7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea3eee9e8d1acfc2",
            "owner_id": "573275805523",
            "tags": {
              "Name": "dev-ap-southeast-1-vpc"
            },
            "tags_all": {
              "Name": "dev-ap-southeast-1-vpc"
            }
          }
        }
      ]
    }
  ]
}